(foreign_library
  (archive_name nums)
  (language c)
  (names nat_stubs bng)
  (extra_deps (glob_files *.c))
  (flags "-DBNG_ARCH_%{architecture}"))

(include install-legacy)

(library
  (name nums)
  (public_name num.private)
  (wrapped false)
  (modules arith_flags arith_status big_int int_misc nat num ratio)
  (synopsis "Internal nums library - do not use directly")
  (foreign_archives nums))
