(library
  (name nums)
  (public_name num)
  (wrapped false)
  (modules arith_flags arith_status big_int int_misc nat num ratio)
  (synopsis "Arbitrary-precision rational arithmetic")
  (foreign_archives nums))

(foreign_library
  (archive_name nums)
  (language c)
  (names nat_stubs bng)
  (extra_deps (glob_files *.c))
  (flags "-DBNG_ARCH_%{architecture}"))

(library
  (name num_core)
  (public_name num.core)
  (wrapped false)
  (modules )
  (libraries num))
